# nanobot-rs

./: Cargo.toml  README.en.md  README.md
src/: bus.rs  config.rs  lib.rs  main.rs  memory.rs  session.rs  utils.rs
src/agent/: context.rs  loop.rs  mod.rs
src/channels/: dingtalk.rs  feishu.rs  manager.rs  mochat.rs  mod.rs  telegram.rs  whatsapp.rs
src/providers/: base.rs  litellm.rs  openai.rs
src/tools/: base.rs  filesystem.rs  message.rs  mod.rs  registry.rs  shell.rs  web.rs
